force-app/main/default/objects/Cycle__c/Cycle__c.object-meta.xml
<CustomObject>
    <label>Cycle</label>
    <nameField>
        <label>Cycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cycles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>