force-app/main/default/objects/Cycle__c/fields/Additional_Semen_Collection_Method__c.field-meta.xml
<CustomField>
    <fullName>Additional_Semen_Collection_Method__c</fullName>
    <label>Backup Semen Collection Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Semen_Sample_Production_Method</valueSetName>
    </valueSet>
</CustomField>