force-app/main/default/objects/Cycle__c/fields/Doctors_Treatment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Doctors_Treatment_Notes__c</fullName>
    <label>Doctors Treatment Notes</label>
    <type>TextArea</type>
</CustomField>