force-app/main/default/objects/Cycle__c/fields/Embryo_Glue__c.field-meta.xml
<CustomField>
    <fullName>Embryo_Glue__c</fullName>
    <label>Embryo Glue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>