force-app/main/default/objects/Cycle__c/fields/How_Will_Semen_be_Collected__c.field-meta.xml
<CustomField>
    <fullName>How_Will_Semen_be_Collected__c</fullName>
    <label>How Will Semen be Collected?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Semen_Sample_Production_Method</valueSetName>
    </valueSet>
</CustomField>