force-app/main/default/objects/Cycle__c/fields/Insemination_Method__c.field-meta.xml
<CustomField>
    <fullName>Insemination_Method__c</fullName>
    <label>Insemination Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IVF</fullName>
            </value>
            <value>
                <fullName>Standard ICSI</fullName>
            </value>
            <value>
                <fullName>HA ICSI</fullName>
            </value>
            <value>
                <fullName>1/2 ICSI 1/2 IVF</fullName>
            </value>
            <value>
                <fullName>ICSI plus Calcium Activation</fullName>
            </value>
            <value>
                <fullName>ICSI + HA ICSI plus Calcium Activation</fullName>
            </value>
            <value>
                <fullName>1/2 IVF 1/2 HA ICSI</fullName>
            </value>
            <value>
                <fullName>1/2 IVF 1/2 HA ICSI plus Calcium Activation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>