force-app/main/default/objects/Cycle__c/fields/Number_of_Cycles_for_consent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cycles_for_consent__c</fullName>
    <formula>VALUE(RIGHT(SUBSTITUTE(Name, &quot; &quot;, &quot;&quot;), LEN(Name) - FIND(&quot;/&quot;, Name) - 1)) - 
10 * FLOOR(VALUE(RIGHT(SUBSTITUTE(Name, &quot; &quot;, &quot;&quot;), LEN(Name) - FIND(&quot;/&quot;, Name) - 1)) / 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Cycles for consent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>