force-app/main/default/objects/Cycle__c/fields/Plan_Checked_by_User_2_Initials__c.field-meta.xml
<CustomField>
    <fullName>Plan_Checked_by_User_2_Initials__c</fullName>
    <label>Plan Reviewed by User 2 (Initials)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>