force-app/main/default/objects/Cycle__c/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <label>Cycle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Antagonist</fullName>
            </value>
            <value>
                <fullName>Pill Antagonist</fullName>
            </value>
            <value>
                <fullName>Boost</fullName>
                <label>Flare/Boost</label>
            </value>
            <value>
                <fullName>Natural</fullName>
            </value>
            <value>
                <fullName>HRT</fullName>
            </value>
            <value>
                <fullName>Down Reg</fullName>
            </value>
            <value>
                <fullName>FSH</fullName>
            </value>
            <value>
                <fullName>Luteal Phase</fullName>
            </value>
            <value>
                <fullName>Duostim #1 Antagonist</fullName>
            </value>
            <value>
                <fullName>Duostim #1 Down Regulation</fullName>
            </value>
            <value>
                <fullName>Duostim #1 Flare/Boost</fullName>
            </value>
            <value>
                <fullName>Duostim #2  Antagoinist</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Letrozole</fullName>
            </value>
            <value>
                <fullName>Ministim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>