force-app/main/default/objects/Cycle__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finalising Admission</fullName>
            </value>
            <value>
                <fullName>In Cycle</fullName>
            </value>
            <value>
                <fullName>WFPT</fullName>
            </value>
            <value>
                <fullName>Awaiting Clinical Pregnancy</fullName>
            </value>
            <value>
                <fullName>Awaiting Live Birth</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>