force-app/main/default/objects/Cycle__c/fields/Stim_plan_reviewed__c.field-meta.xml
<CustomField>
    <fullName>Stim_plan_reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stim plan reviewed?</label>
    <type>Checkbox</type>
</CustomField>