force-app/main/default/objects/Cycle__c/fields/Stim_plan_reviewed_date__c.field-meta.xml
<CustomField>
    <fullName>Stim_plan_reviewed_date__c</fullName>
    <label>Stim plan reviewed date</label>
    <type>Date</type>
</CustomField>