force-app/main/default/objects/Cycle__c/recordTypes/Duo_Stim.recordType-meta.xml
<RecordType>
    <fullName>Duo_Stim</fullName>
    <active>true</active>
    <label>Duo Stim</label>
</RecordType>