force-app/main/default/objects/Cycle__c/recordTypes/Egg_Freeze_Cycle.recordType-meta.xml
<RecordType>
    <fullName>Egg_Freeze_Cycle</fullName>
    <active>true</active>
    <label>Egg Freeze Cycle</label>
</RecordType>