force-app/main/default/objects/Cycle__c/recordTypes/FET_Cycle.recordType-meta.xml
<RecordType>
    <fullName>FET_Cycle</fullName>
    <active>true</active>
    <label>FET Cycle</label>
</RecordType>