force-app/main/default/objects/Cycle__c/recordTypes/Fresh_Egg_Donor_Cycle.recordType-meta.xml
<RecordType>
    <fullName>Fresh_Egg_Donor_Cycle</fullName>
    <active>true</active>
    <label>Fresh Egg Donor Cycle</label>
</RecordType>