force-app/main/default/objects/Cycle__c/recordTypes/IUI_Cycle.recordType-meta.xml
<RecordType>
    <fullName>IUI_Cycle</fullName>
    <active>true</active>
    <label>IUI Cycle</label>
</RecordType>