force-app/main/default/objects/Cycle__c/recordTypes/IVF_Cycle.recordType-meta.xml
<RecordType>
    <fullName>IVF_Cycle</fullName>
    <active>true</active>
    <label>IVF Cycle</label>
</RecordType>