force-app/main/default/objects/Cycle__c/recordTypes/Lab_Only_Cycle.recordType-meta.xml
<RecordType>
    <fullName>Lab_Only_Cycle</fullName>
    <active>true</active>
    <label>Lab Only Cycle</label>
</RecordType>