force-app/main/default/objects/Cycle__c/recordTypes/OI_Cycle.recordType-meta.xml
<RecordType>
    <fullName>OI_Cycle</fullName>
    <active>true</active>
    <label>OI Cycle</label>
</RecordType>