force-app/main/default/objects/Cycle__c/recordTypes/VOT_Cycle.recordType-meta.xml
<RecordType>
    <fullName>VOT_Cycle</fullName>
    <active>true</active>
    <label>VOT Cycle</label>
</RecordType>