force-app/main/default/objects/Cycle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Cycle_Type_Name__c</columns>
    <columns>Insemination_Method__c</columns>
    <columns>How_Will_Semen_be_Collected__c</columns>
    <columns>PGT_Type__c</columns>
    <columns>Day_1__c</columns>
    <columns>Protocol__c</columns>
    <columns>Cycle_Outcome__c</columns>
    <columns>Pregnancy_Outcome__c</columns>
    <columns>Estimated_Delivery_Date__c</columns>
    <columns>Doctor_Initiating_Cycle_Name_Text__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Patient__c</field>
        <operation>notContain</operation>
        <value>Wonder Woman</value>
    </filters>
    <filters>
        <field>Patient__c</field>
        <operation>notContain</operation>
        <value>Female Test</value>
    </filters>
    <label>All</label>
    <sharedTo>
        <group>Create_Fertility_Lab</group>
    </sharedTo>
</ListView>