force-app/main/default/objects/Cycle__c/listViews/BIVF_Cycles_Awaiting_Start.listView-meta.xml
<ListView>
    <fullName>BIVF_Cycles_Awaiting_Start</fullName>
    <columns>NAME</columns>
    <columns>Cycle_Type_Name__c</columns>
    <columns>Protocol__c</columns>
    <columns>Clinic_Cycle_Being_Undertaken_at_Name__c</columns>
    <columns>Treating_Doctor__c</columns>
    <columns>Patient__c</columns>
    <columns>Partner__c</columns>
    <columns>Pricing_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Finalising Admission</value>
    </filters>
    <filters>
        <field>Clinic_Cycle_Being_Undertaken_At__c</field>
        <operation>equals</operation>
        <value>Ballarat IVF</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_MONTHS:3</value>
    </filters>
    <label>BIVF Cycles Awaiting Start last 3 months</label>
</ListView>