force-app/main/default/objects/Cycle__c/listViews/Copy_of_Cycles_Started_This_Year.listView-meta.xml
<ListView>
    <fullName>Copy_of_Cycles_Started_This_Year</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Clinic_Cycle_Being_Undertaken_At__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Day_1__c</columns>
    <columns>Protocol__c</columns>
    <columns>Doctor_Initiating_Cycle_Name_Text__c</columns>
    <columns>Filgrastim__c</columns>
    <columns>PRP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Day_1__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>Clinic_Cycle_Being_Undertaken_At__c</field>
        <operation>equals</operation>
        <value>Ballarat IVF</value>
    </filters>
    <filters>
        <field>Protocol__c</field>
        <operation>equals</operation>
        <value>Antagonist,Boost,Down Reg,Duostim #1 Antagonist,Duostim #1 Down Regulation,Duostim #1 Flare/Boost,Duostim #2  Antagoinist</value>
    </filters>
    <label>IVF Cycles Started This Year</label>
</ListView>