force-app/main/default/objects/Cycle__c/listViews/Cycles_Awaiting_Claiming.listView-meta.xml
<ListView>
    <fullName>Cycles_Awaiting_Claiming</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Clinic_Cycle_Being_Undertaken_At__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Day_1__c</columns>
    <columns>Cycle_Outcome__c</columns>
    <columns>Status__c</columns>
    <columns>Doctor_Initiating_Cycle_Name_Text__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Claim_Status__c</field>
        <operation>notEqual</operation>
        <value>Claim Completed</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>WFPT,Awaiting Clinical Pregnancy,Awaiting Live Birth,Closed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Cycle__c.Duo_Stim,Cycle__c.Egg_Freeze_Cycle,Cycle__c.FET_Cycle,Cycle__c.Fresh_Egg_Donor_Cycle,Cycle__c.IUI_Cycle,Cycle__c.IVF_Cycle,Cycle__c.Lab_Only_Cycle,Cycle__c.VOT_Cycle</value>
    </filters>
    <filters>
        <field>Cycle_Outcome__c</field>
        <operation>notEqual</operation>
        <value>Not Started</value>
    </filters>
    <label>Cycles Awaiting Claiming</label>
    <sharedTo>
        <group>Ballarat_IVF_Admin</group>
        <group>Create_Fertility_Admin</group>
    </sharedTo>
</ListView>