force-app/main/default/objects/Cycle__c/listViews/Cycles_Started_This_Week.listView-meta.xml
<ListView>
    <fullName>Cycles_Started_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Clinic_Cycle_Being_Undertaken_At__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Day_1__c</columns>
    <columns>Protocol__c</columns>
    <columns>Doctor_Initiating_Cycle_Name_Text__c</columns>
    <columns>Filgrastim__c</columns>
    <columns>PRP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Day_1__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Cycles Started This Week</label>
    <sharedTo>
        <group>Ballarat_IVF_Lab</group>
        <group>Create_Fertility_Lab</group>
    </sharedTo>
</ListView>